[package]
name = "pingora-waf"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
openssl = "0.10.75"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
arc-swap = "1.8.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.24"
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

pingora = { version = "0.6.0", features = ["proxy", "openssl"] }
pingora-core = { version = "0.6.0", features = ["openssl"] }
pingora-proxy = { version = "0.6.0", features = ["openssl"] }

tracing-appender = "0.2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
bytes = "1"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
aho-corasick = "1"
regex = "1"
dashmap = "6"
prometheus = "0.13"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
chrono = {version =  "0.4.42", features = ["serde"] }
serde_json = "1.0.149"
